# brain-indexer

./: .gitignore  Cargo.toml  DESIGN.md  README.md  agents.md  config.toml.example  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.agents/: config.yaml
.agents/modules/: rust
.agents/project/: agents.md
.impeccable/: design.json
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/core/: vault.rs
core/src/scanner/: mod.rs
docs/: PLAN.md  SPEC.md  SPEC_NotebookLMUpgrade.md  implementation_plan.md
docs/superpowers/plans/: 2026-05-24-notebooklm-stage-command.md
docs/superpowers/specs/: 2026-05-07-brain-indexer-mvp-design.md
src/: App.tsx  index.css  lib.rs  main.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/compiler/: mod.rs
src/components/: ConfigPanel.tsx  IntegrityPanel.tsx  Sidebar.tsx  WorkspacePanel.tsx
src/core/: vault.rs
src/scanner/: mod.rs
src/store/: appSlice.ts  hooks.ts  index.ts  tauriBridge.ts
