[package]
name = "brain-indexer-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
brain-indexer-core = { path = "../core" }
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
